--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ a:hover {color: #404040;transition-property: all;transition-duration: 0.3s;trans
 a.none:hover {text-decoration: none;}
 
 /* Header */
-.top {background-color: #d35f5f;padding: 5px 0;color: #fff;}
+.top {background-color: #73AC45;padding: 5px 0;color: #fff;}
 .top p {margin: 0;}
 .top ul {margin: 0;padding: 0;}
 .top li i {color: #fff;}
@@ -175,7 +175,7 @@ footer.site-footer ul a {color: #666;font-size: 13px;}
 footer.site-footer p {font-size: 13px;}
 footer.site-footer p a {color: #666;}
 p.text {color: #666;}
-#copyright {background: #d35f5f;color: #ccc;padding: 15px 0;font-size: 12px;margin-top: 20px;}
+#copyright {background: #73AC45;color: #ccc;padding: 15px 0;font-size: 12px;margin-top: 20px;}
 #copyright p, #copyright ul {margin: 0;float: left;font-size: 12px;}
 #copyright a {color: #fff;font-size: 13px;}
 .site-footer li a:hover {color:#005FA6;}
